completed dynamic templates by using Java script

--- a/Assignments/Assignment_Dynamic/T-84/T84_movie_poster.html
+++ b/Assignments/Assignment_Dynamic/T-84/T84_movie_poster.html
@@ -53,8 +53,8 @@
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="#">Movie Dada</a></h1>
-      <h2>Free to Watch</h2>
+      <!-- <h1><a href="#">Movie Dada</a></h1>
+      <h2>Free to Watch</h2> -->
     </div>
     <form action="#" method="post">
       <fieldset>
@@ -64,19 +64,19 @@
       </fieldset>
     </form>
     <nav>
-      <ul>
-        <li><a href="#">New Movies</a></li>
+      <ul id="demo">
+        <!-- <li><a href="#">Movies</a></li>
         <li><a href="#">Tollywood</a></li>
         <li><a href="#">Bollywood</a></li>
         <li><a href="#">Hollywood</a></li>
-        <li class="last"><a href="#">Others</a></li>
+        <li class="last"><a href="#">Others</a></li> -->
       </ul>
     </nav>
   </header>
 </div>
 <div class="wrapper row2">
   <div id="container" class="clear">
-    <section id="slider"><a href="#"><img src="./images/power.jpg" width="960" height="360" alt=""></a></section>
+    <section id="slider"><a href="#"><img src="./images/power.jpg" width="960" height="360" alt="" id="myBanner"></a></section>
     <section id="shout">
       <p>Bheemla Nayak is an upcoming Telugu language action thriller film directed by Saagar K. Chandra from a screenplay written by Trivikram Srinivas. It is a remake of the 2020 Malayalam film Ayyappanum Koshiyum by Sachy. Produced by Suryadevara Naga Vamsi of Sithara Entertainments, the film stars Pawan Kalyan, Rana Daggubati, and Nithya Menen.</p>
     </section>
@@ -105,23 +105,35 @@
       <h1>Latest From The Gallery</h1>
       <section id="latest" class="last clear">
         <article class="one_quarter">
-          <figure><img src="images/images 6.jpg" width="215" height="315" alt="">
-            <figcaption>Master</figcaption>
+          <figure class="myImage">
+            <!-- <img src="images/images 6.jpg" width="215" height="315" alt=""> -->
+            <!-- <figcaption>Master</figcaption> -->
+            <figcaption>ACHARYA</figcaption>
+
           </figure>
         </article>
         <article class="one_quarter">
-          <figure><img src="images/images8.jpg" width="215" height="315" alt="">
-            <figcaption>Oxygen</figcaption>
+          <figure class="myImage">
+            <!-- <img src="images/images8.jpg" width="215" height="315" alt=""> -->
+            <!-- <figcaption>Oxygen</figcaption> -->
+            <figcaption>PUSHPA</figcaption>
+
           </figure>
         </article>
         <article class="one_quarter">
-          <figure><img src="images/Bhai.jpg" width="215" height="315" alt="">
-            <figcaption>My Story</figcaption>
+          <figure class="myImage">
+            <!-- <img src="images/Bhai.jpg" width="215" height="315" alt=""> -->
+            <!-- <figcaption>My Story</figcaption> -->
+            <figcaption>BACHELOR</figcaption>
+
           </figure>
         </article>
         <article class="one_quarter lastbox">
-          <figure><img src="images/images9.jpg" width="215" height="315" alt="">
-            <figcaption>Love Story</figcaption>
+          <figure class="myImage">
+            <!-- <img src="images/images9.jpg" width="215" height="315" alt=""> -->
+            <!-- <figcaption>Love Story</figcaption> -->
+            <figcaption>RANGASTALAM</figcaption>
+
           </figure>
         </article>
       </section>
@@ -133,6 +145,7 @@
     <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
     <p class="fl_right">Movies By<a target="_blank" href="https://www.movies Dada.com/" title="Free Movies Website">  Hari Vardhan</a></p>
   </footer>
-</div> -->
+</div> 
+<script src="./T-84_style.js"></script>
 </body>
 </html>
