--- a/Assignments/Assignment_Dynamic/T-85/T85_tour_template.html
+++ b/Assignments/Assignment_Dynamic/T-85/T85_tour_template.html
@@ -9,22 +9,22 @@
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="#">Tour My India</a></h1>
-      <h2>Fly with your favorite Places</h2>
+      <!-- <h1><a href="#">Tour My India</a></h1>
+      <h2>Fly with your favorite Places</h2> -->
     </div>
     <nav>
-      <ul>
-        <li><a href="#">Destination</a></li>
+      <ul id="demo">
+        <!-- <li><a href="#">Destination</a></li>
         <li><a href="#">Package</a></li>
         <li><a href="#">Adventure</a></li>
         <li><a href="#">Trekking</a></li>
-        <li class="last"><a href="#">Weekend</a></li>
+        <li class="last"><a href="#">Weekend</a></li> -->
       </ul>
     </nav>
   </header>
 </div>
 <div class="wrapper row2">
-  <div id="container" class="clear">
+  <div id="container" class="clear">,
     <section id="shout">
       <p>Home to some of the surreal hill stations, India is a travel destination you have to visit. Adorned with tranquil ambience, verdant greenery, sprawling desert, beautiful valleys, and dreamy lakes, the hill stations in India make for the best holiday destinations. Undoubtedly, your hill station trip in India will be an experience that shall remain etched in your mind for the rest of your life. </p>
     </section>
@@ -32,11 +32,11 @@
       <section id="latest">
         <article>
           <figure>
-            <ul>
-              <li class="one_quarter"><img src="images/taj.jpg" width="215" height="150" alt=""></li>
+            <ul id="demo">
+              <!-- <li class="one_quarter"><img src="images/taj.jpg" width="215" height="150" alt=""></li>
               <li class="one_quarter"><img src="images/kerala.jpg" width="215" height="150" alt=""></li>
               <li class="one_quarter"><img src="images/goa.jpg" width="215" height="150" alt=""></li>
-              <li class="one_quarter lastbox"><img src="images/manali.jpg" width="215" height="150" alt=""></li>
+              <li class="one_quarter lastbox"><img src="images/manali.jpg" width="215" height="150" alt=""></li> -->
             </ul>
             <figcaption><a href="#">View All Our Recent Places &raquo;</a></figcaption>
           </figure>
@@ -102,5 +102,6 @@
     <p class="fl_right">Developed by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates"> Hari Vardhan</a></p>
   </footer>
 </div>
+<script src="T_85_styles.js"></script>
 </body>
 </html>
