--- a/Assignments/Assignment_Dynamic/T-87/T87-flipcart.html
+++ b/Assignments/Assignment_Dynamic/T-87/T87-flipcart.html
@@ -9,16 +9,16 @@
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="#">FlipCart</a></h1>
-      <h2>Easy Shopping</h2>
+      <!-- <h1><a href="#">FlipCart</a></h1>
+      <h2>Easy Shopping</h2> -->
     </div>
     <nav>
-      <ul>
-        <li><a href="#">Profile</a></li>
+      <ul id="demo">
+        <!-- <li><a href="#">Profile</a></li>
         <li><a href="#">Cart</a></li>
         <li><a href="#">WishList</a></li>
         <li><a href="#">Favorites</a></li>
-        <li class="last"><a href="#">Wallet</a></li>
+        <li class="last"><a href="#">Wallet</a></li> -->
       </ul>
     </nav>
   </header>
@@ -28,22 +28,26 @@
     <div id="homepage">
       <section id="latest" class="clear">
         <article class="one_quarter">
-          <figure><img src="images/mobile.jpg" width="215" height="315" alt="">
+          <figure class="myImage">
+            <!-- <img src="images/mobile.jpg" width="215" height="315" alt=""> -->
             <figcaption>Electronics</figcaption>
           </figure>
         </article>
         <article class="one_quarter">
-          <figure><img src="images/grocery.jpg" width="215" height="315" alt="">
+          <figure class="myImage">
+            <!-- <img src="images/grocery.jpg" width="215" height="315" alt=""> -->
             <figcaption>Grocery</figcaption>
           </figure>
         </article>
         <article class="one_quarter">
-          <figure><img src="images/home.jpg" width="215" height="315" alt="">
+          <figure class="myImage">
+            <!-- <img src="images/home.jpg" width="215" height="315" alt=""> -->
             <figcaption>Home</figcaption>
           </figure>
         </article>
         <article class="one_quarter lastbox">
-          <figure><img src="images/travel.jpg" width="215" height="315" alt="">
+          <figure class="myImage">
+            <!-- <img src="images/travel.jpg" width="215" height="315" alt=""> -->
             <figcaption>Travel</figcaption>
           </figure>
         </article>
@@ -105,5 +109,6 @@
     <p class="fl_right">Developed By<a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates"> Hari Vardhan</a></p>
   </footer>
 </div>
+<script src="T_87_styles.js"></script>
 </body>
 </html>
