--- a/Assignments/Assignment_Dynamic/T-86/T86_10000coders.html
+++ b/Assignments/Assignment_Dynamic/T-86/T86_10000coders.html
@@ -9,16 +9,16 @@
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="#">10000 Coders</a></h1>
-      <h2>Be Free to Learn</h2>
+      <!-- <h1><a href="#">10000 Coders</a></h1>
+      <h2>Be Free to Learn</h2> -->
     </div>
     <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
+      <ul id="demo">
+        <!-- <li><a href="#">Home</a></li>
         <li><a href="#">Curriculum</a></li>
         <li><a href="#">Team</a></li>
         <li><a href="#">Admission</a></li>
-        <li class="last"><a href="#">Price</a></li>
+        <li class="last"><a href="#">Price</a></li> -->
       </ul>
     </nav>
   </header>
@@ -26,7 +26,7 @@
 <div class="wrapper row2">
   <div id="container" class="clear">
     <section id="slider" class="clear">
-      <figure><img src="./images/murali sir.jpg" alt="">
+      <figure ><img src="./images/murali sir.jpg" alt="" id="myBanner">
         <figcaption>
           <h2>Murali Sir mentor</h2>
           <p>Murali Sir has 11 years experience on webdevelopment and 6 years experience on mentor. Murali sir is also a Manager in Product Based Company. </p>
@@ -57,7 +57,8 @@
       </section>
       <section id="latest" class="last clear">
         <article class="one_quarter">
-          <figure><img src="./images/react.png" width="215" height="100" alt="">
+          <figure class="myImage">
+            <!-- <img src="./images/react.png" width="215" height="100" alt=""> -->
             <figcaption>
               <h2>React JS</h2>
               <p>React (also known as React.js or ReactJS) is a free and open-source front-end JavaScript library for building user interfaces or UI components.</p>
@@ -66,7 +67,8 @@
           </figure>
         </article>
         <article class="one_quarter">
-          <figure><img src="./images/mongo.png" width="215" height="100" alt="">
+          <figure class="myImage">
+            <!-- <img src="./images/mongo.png" width="215" height="100" alt=""> -->
             <figcaption>
               <h2>Mongo DB</h2>
               <p>MongoDB is a source-available cross-platform document-oriented database program. Classified as a NoSQL database program, MongoDB uses JSON-like documents with optional schemas. </p>
@@ -75,7 +77,8 @@
           </figure>
         </article>
         <article class="one_quarter">
-          <figure><img src="./images/node.png" width="215" height="100" alt="">
+          <figure class="myImage">
+            <!-- <img src="./images/node.png" width="215" height="100" alt=""> -->
             <figcaption>
               <h2>Node js</h2>
               <p>Node.js is an open-source, cross-platform, back-end JavaScript runtime environment that runs on the V8 engine and executes JavaScript code outside a web browser. </p>
@@ -84,7 +87,8 @@
           </figure>
         </article>
         <article class="one_quarter lastbox">
-          <figure><img src="./images/bootstrap.jpg" width="215" height="100" alt="">
+          <figure class="myImage">
+            <!-- <img src="./images/bootstrap.jpg" width="215" height="100" alt=""> -->
             <figcaption>
               <h2>Bootstrap</h2>
               <p>Bootstrap is a free and open-source CSS framework directed at responsive, mobile-first front-end web development.</p>
@@ -102,5 +106,6 @@
     <p class="fl_right">Website by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">Hari Vardhan</a></p>
   </footer>
 </div>
+<script src="./T_86_style.js"></script>
 </body>
 </html>
