template 1 and temaplate 2

--- a/JAVASCRIPT/DOM/Creating.html
+++ b/JAVASCRIPT/DOM/Creating.html
@@ -18,8 +18,8 @@
         //step 3:
         document.body.appendChild(heading2);
       }
-
-      for (i = 0; i < 5; i++) {
+      for (i = 0; i < 5; i++) 
+      {
         // step 1:
         var para = document.createElement("p");
 
