--- a/Assignments/Assignment Dynamic Templates/Dynamic Basic 84/index.html
+++ b/Assignments/Assignment Dynamic Templates/Dynamic Basic 84/index.html
@@ -21,37 +21,10 @@
         <section class="section2" id="section2"> </section>
         <div class="homepage">
           <section class="section3" id="section3"></section>
-          <section class="section4" id="section4">
-            <article id="article1">
-              <figure>
-                <img src="images/demo/215x315(1)" alt="" />
-                <figcaption>smriti mandana</figcaption>
-              </figure>
-            </article>
-            <article id="article2">
-              <figure>
-                <img src="images/demo/215x315(2)" alt="" />
-                <figcaption>Mitali Raj</figcaption>
-              </figure>
-            </article>
-            <article id="article3">
-              <figure>
-                <img src="images/demo/215x315(3)" alt="" />
-                <figcaption>MS Dhoni</figcaption>
-              </figure>
-            </article>
-            <article id="article4">
-              <figure>
-                <img src="images/demo/215x315(4)" alt="" />
-                <figcaption>Virat Kohli</figcaption>
-              </figure>
-            </article>
-          </section>
+          <section class="section4" id="section4"></section>
         </div>
       </div>
     </div>
-    <!-- ================================================================================================================= -->
-
     <div class="wrapper row3">
       <footer id="footer"></footer>
     </div>
