--- a/Assignments/Assignment Dynamic Templates/Dynamic Basic 85/index.html
+++ b/Assignments/Assignment Dynamic Templates/Dynamic Basic 85/index.html
@@ -15,36 +15,16 @@
     <!-- ========== Header ============== -->
     <div class="wrapper row1">
         <header>
-            <div id="title">
-                <h1><a href="#">Indian Premier League</a></h1>
-                <h2>Twenty20 cricket league</h2>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="#title">Home</a></li>
-                    <li><a href="#section1">About</a></li>
-                    <li><a href="#section2">Images</a></li>
-                    <li><a href="#section4">Teams</a></li>
-                    <li class="last"><a href="#main_footer">Footer</a></li>
-                </ul>
-            </nav>
+            <div id="title"></div>
+            <nav></nav>
         </header>
     </div>
-       <!-- ========== Row 2 ============== -->
-       <div class="wrapper row2">
+    <div class="wrapper row2">
         <div class="container">
-            <!-- ========== Section 1 ============== -->
-            <section class="section1">
-                <p>The Indian Premier League (IPL) is a professional Twenty20 cricket league, contested by eight teams
-                    based out of eight Indian cities. founded by the Board of Control for Cricket in India (BCCI) in
-                    2007. It is usually held between March and May of every year.</p>
-            </section>
-            <!-- ========== Home Page ============== -->
+            <section class="section1" id="section1"></section>
             <div class="homepage">
-
-                <!-- ========== Section 2 ============== -->
-                <section class="section2">
-                    <article>
+                <section class="section2" id="section2">
+                    <!-- <article>
                         <figure>
                             <ul>
                                 <li>
@@ -65,11 +45,11 @@
                             <p><a href="https://www.iplt20.com/" target="_blank">View all our recent works for ipl here
                                     »</a></p>
                         </figcaption>
-                    </article>
+                    </article> -->
                 </section>
 
                 <!-- ========== Section 3 ============== -->
-                <section class="section3">
+                <section class="section3" id="section3">
                     <article id="article1" class="article_row1">
                         <figure>
                             <img src="./images/demo/32x32(1)" alt="csk">
@@ -77,9 +57,9 @@
                         <strong>CSK</strong>
                         <p>The Chennai Super Kings (CSK) is a franchise cricket team based in Chennai, Tamil Nadu.
                             Founded in 2008</p>
-                       <div class="readmore">
+                        <div class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Chennai_Super_Kings" target="_blank">Read More »</a>
-                       </div>
+                        </div>
                     </article>
                     <article id="article2" class="article_row1">
                         <figure>
@@ -88,9 +68,9 @@
                         <strong>MI</strong>
                         <p>The Mumbai Indians (MI) are a franchise cricket team based in Mumbai, Maharashtra. Founded in
                             2008</p>
-                       <div class="readmore">
+                        <div class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Mumbai_Indians" target="_blank">Read More »</a>
-                       </div>
+                        </div>
                     </article>
                     <article id="article3" class="article_row1">
                         <figure>
@@ -99,10 +79,10 @@
                         <strong>RCB</strong>
                         <p>The Royal Challengers Bangalore (RCB) are a franchise cricket team based in Bangalore,
                             Karnataka. It was founded in 2008 </p>
-                       <div class="readmore">
+                        <div class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Royal_Challengers_Bangalore" target="_blank">Read
                                 More »</a>
-                            </div>
+                        </div>
                     </article>
                     <article id="article4" class="article_row1 last">
                         <figure>
@@ -111,9 +91,9 @@
                         <strong>SRH</strong>
                         <p>The Sunrisers Hyderabad (SRH) are a franchise cricket team based in Hyderabad, Telangana,
                             India. Founded in 2012 </p>
-                       <div class="readmore">
+                        <div class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Sunrisers_Hyderabad" target="_blank">Read More »</a>
-                       </div>
+                        </div>
                     </article>
                     <article id="article5" class="article_row2">
                         <figure>
@@ -122,9 +102,9 @@
                         <strong>DC</strong>
                         <p>The Delhi Capitals (DC) are a franchise cricket team based out of Delhi in the Indian Premier
                             League (IPL). Founded in 2008 .</p>
-                       <div class="readmore">
+                        <div class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Delhi_Capitals" target="_blank">Read More »</a>
-                       </div>
+                        </div>
                     </article>
                     <article id="article6" class="article_row1">
                         <figure>
@@ -133,9 +113,9 @@
                         <strong>PBKS</strong>
                         <p>The Punjab Kings (PBKS) are a franchise cricket team based in Mohali, Punjab India.
                             Established in 2008.</p>
-                       <div class="readmore">
+                        <div class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Punjab_Kings" target="_blank">Read More »</a>
-                       </div>
+                        </div>
                     </article>
                     <article id="article7" class="article_row1">
                         <figure>
@@ -144,9 +124,9 @@
                         <strong>RR</strong>
                         <p>The Rajasthan Royals (RR) are a franchise cricket team based in Jaipur, Rajasthan. Founded in
                             2008</p>
-                       <div class="readmore">
+                        <div class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Rajasthan_Royals" target="_blank">Read More »</a>
-                       </div>
+                        </div>
                     </article>
                     <article id="article8" class="article_row1 last">
                         <figure>
@@ -155,10 +135,10 @@
                         <strong>KKR</strong>
                         <p>The Kolkata Knight Riders (KKR) are a franchise cricket team representing the city of Kolkata
                             in the Indian Premier League.</p>
-                       <div class="readmore">
+                        <div class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Kolkata_Knight_Riders" target="_blank">Read More
                                 »</a>
-                            </div>
+                        </div>
                     </article>
                 </section>
             </div>
@@ -167,12 +147,14 @@
 
         <!-- =======================================================footer================================================ -->
         <div class="wrapper row3">
-            <footer>
-                <p >Copyright © 2021 - All Rights Reserved - IPL</p>
-                <p >Template cloned from OS-Templates by Ervin </p>
+            <footer id="footer">
+                <p>Copyright © 2021 - All Rights Reserved - IPL</p>
+                <p>Template cloned from OS-Templates by Ervin </p>
             </footer>
         </div>
+        <script src="./script.js">
 
+        </script>
 </body>
 
 </html>
