--- a/Assignments/Assignment Dynamic Templates/Dynamic Basic 85/index.html
+++ b/Assignments/Assignment Dynamic Templates/Dynamic Basic 85/index.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic-85</title>
     <link rel="stylesheet" href="./styles.css">
-
 </head>
-
 <body>
-    <!-- ========== Row 1 ============== -->
-    <!-- ========== Header ============== -->
     <div class="wrapper row1">
         <header>
             <div id="title"></div>
@@ -23,138 +18,15 @@
         <div class="container">
             <section class="section1" id="section1"></section>
             <div class="homepage">
-                <section class="section2" id="section2">
-                    <!-- <article>
-                        <figure>
-                            <ul>
-                                <li>
-                                    <img src="./images/demo/215x150(4)" alt="215x150">
-                                </li>
-                                <li>
-                                    <img src="./images/demo/215x150(2)" alt="215x150">
-                                </li>
-                                <li>
-                                    <img src="./images/demo/215x150(3)" alt="215x150">
-                                </li>
-                                <li id="last">
-                                    <img src="./images/demo/215x150(1)" alt="215x150">
-                                </li>
-                            </ul>
-                        </figure>
-                        <figcaption>
-                            <p><a href="https://www.iplt20.com/" target="_blank">View all our recent works for ipl here
-                                    »</a></p>
-                        </figcaption>
-                    </article> -->
-                </section>
-
-                <!-- ========== Section 3 ============== -->
-                <section class="section3" id="section3">
-                    <article id="article1" class="article_row1">
-                        <figure>
-                            <img src="./images/demo/32x32(1)" alt="csk">
-                        </figure>
-                        <strong>CSK</strong>
-                        <p>The Chennai Super Kings (CSK) is a franchise cricket team based in Chennai, Tamil Nadu.
-                            Founded in 2008</p>
-                        <div class="readmore">
-                            <a href="https://en.wikipedia.org/wiki/Chennai_Super_Kings" target="_blank">Read More »</a>
-                        </div>
-                    </article>
-                    <article id="article2" class="article_row1">
-                        <figure>
-                            <img src="./images/demo/32x32(2)" alt="mi">
-                        </figure>
-                        <strong>MI</strong>
-                        <p>The Mumbai Indians (MI) are a franchise cricket team based in Mumbai, Maharashtra. Founded in
-                            2008</p>
-                        <div class="readmore">
-                            <a href="https://en.wikipedia.org/wiki/Mumbai_Indians" target="_blank">Read More »</a>
-                        </div>
-                    </article>
-                    <article id="article3" class="article_row1">
-                        <figure>
-                            <img src="./images/demo/32x32(3)" alt="rcb">
-                        </figure>
-                        <strong>RCB</strong>
-                        <p>The Royal Challengers Bangalore (RCB) are a franchise cricket team based in Bangalore,
-                            Karnataka. It was founded in 2008 </p>
-                        <div class="readmore">
-                            <a href="https://en.wikipedia.org/wiki/Royal_Challengers_Bangalore" target="_blank">Read
-                                More »</a>
-                        </div>
-                    </article>
-                    <article id="article4" class="article_row1 last">
-                        <figure>
-                            <img src="./images/demo/32x32(4)" alt="32x32">
-                        </figure>
-                        <strong>SRH</strong>
-                        <p>The Sunrisers Hyderabad (SRH) are a franchise cricket team based in Hyderabad, Telangana,
-                            India. Founded in 2012 </p>
-                        <div class="readmore">
-                            <a href="https://en.wikipedia.org/wiki/Sunrisers_Hyderabad" target="_blank">Read More »</a>
-                        </div>
-                    </article>
-                    <article id="article5" class="article_row2">
-                        <figure>
-                            <img src="./images/demo/32x32(5)" alt="32x32">
-                        </figure>
-                        <strong>DC</strong>
-                        <p>The Delhi Capitals (DC) are a franchise cricket team based out of Delhi in the Indian Premier
-                            League (IPL). Founded in 2008 .</p>
-                        <div class="readmore">
-                            <a href="https://en.wikipedia.org/wiki/Delhi_Capitals" target="_blank">Read More »</a>
-                        </div>
-                    </article>
-                    <article id="article6" class="article_row1">
-                        <figure>
-                            <img src="./images/demo/32x32(6)" alt="32x32">
-                        </figure>
-                        <strong>PBKS</strong>
-                        <p>The Punjab Kings (PBKS) are a franchise cricket team based in Mohali, Punjab India.
-                            Established in 2008.</p>
-                        <div class="readmore">
-                            <a href="https://en.wikipedia.org/wiki/Punjab_Kings" target="_blank">Read More »</a>
-                        </div>
-                    </article>
-                    <article id="article7" class="article_row1">
-                        <figure>
-                            <img src="./images/demo/32x32(7)" alt="32x32">
-                        </figure>
-                        <strong>RR</strong>
-                        <p>The Rajasthan Royals (RR) are a franchise cricket team based in Jaipur, Rajasthan. Founded in
-                            2008</p>
-                        <div class="readmore">
-                            <a href="https://en.wikipedia.org/wiki/Rajasthan_Royals" target="_blank">Read More »</a>
-                        </div>
-                    </article>
-                    <article id="article8" class="article_row1 last">
-                        <figure>
-                            <img src="./images/demo/32x32(8)" alt="32x32">
-                        </figure>
-                        <strong>KKR</strong>
-                        <p>The Kolkata Knight Riders (KKR) are a franchise cricket team representing the city of Kolkata
-                            in the Indian Premier League.</p>
-                        <div class="readmore">
-                            <a href="https://en.wikipedia.org/wiki/Kolkata_Knight_Riders" target="_blank">Read More
-                                »</a>
-                        </div>
-                    </article>
-                </section>
+                <section class="section2" id="section2"></section>
+                <section class="section3" id="section3"> </section>
             </div>
         </div>
-        <!-- ================================================================================================================= -->
-
-        <!-- =======================================================footer================================================ -->
-        <div class="wrapper row3">
-            <footer id="footer">
-                <p>Copyright © 2021 - All Rights Reserved - IPL</p>
-                <p>Template cloned from OS-Templates by Ervin </p>
-            </footer>
-        </div>
-        <script src="./script.js">
-
-        </script>
+    </div>
+    <div class="wrapper row3">
+        <footer id="footer"></footer>
+    </div>
+    <script src="./script.js"></script>
 </body>
 
 </html>
