--- a/Templates Dynamic java script]/83/template5.html
+++ b/Templates Dynamic java script]/83/template5.html
@@ -39,10 +39,8 @@
     </div>
     <div class="wrapper row2">
         <div id="container" class="clear">
-            <section id="slider">
-                <a href="#">
-                    <img src="../Template_responsive/template_images/83/960x280.gif" alt="">
-                </a>
+            <section  id="myBanner" >
+          
             </section>
             <div id="homepage">
                 <section id="services" class="clear">
