--- a/Assignments/Assignment Dynamic Templates/Dynamic Basic 86/index.html
+++ b/Assignments/Assignment Dynamic Templates/Dynamic Basic 86/index.html
@@ -11,150 +11,24 @@
 </head>
 
 <body>
-    <!-- ========== Row 1 ============== -->
-    <!-- ========== Header ============== -->
     <div class="wrapper row1">
         <header>
-            <div id="title">
-                <h1><a href="#">Basic 86</a></h1>
-                <h2>Free HTML5 Website Template</h2>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="#">Text Link</a></li>
-                    <li><a href="#">Text Link</a></li>
-                    <li><a href="#">Text Link</a></li>
-                    <li><a href="#">Text Link</a></li>
-                    <li class="last"><a href="#">Text Link</a></li>
-                </ul>
-
-            </nav>
+            <div id="title"></div>
+            <nav></nav>
         </header>
     </div>
-    <!-- ========== Row 2 ============== -->
-    <!-- ========== Container ============== -->
     <div class="wrapper row2">
         <div class="container">
-            <!-- =================================== -->
-            <!-- ========== section 1 ============== -->
-            <div class="section1">
-                <figure>
-                    <img src="./images/demo/630x300.gif" alt="">
-                </figure>
-                <figcaption>
-                    <strong>Eu justo augue estas</strong>
-                    <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna. Urnaultrices
-                        quis curabitur phasellentesque congue magnis vestibulum quismodo nulla et feugiat adipiscinia
-                        pellentum leo.</p>
-                    <p class="readmore">
-                        <a href="#">Read More »</a>
-                    </p>
-                </figcaption>
-            </div>
-            <!-- =================================== -->
-
-            <!-- ========== Homepage ============== -->
+            <div class="section1" id="section1"></div>
             <div class="homepage">
-                <!-- =================================== -->
-                <!-- ========== section 2 ============== -->
-                <section class="section2">
-                    <article id="article1">
-                        <h2>LORUM IPSUM DOLOR</h2>
-                        <figure><img src="./images/demo/80x80.gif" alt=""></figure>
-                        <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed.
-                            Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras
-                            urna urnaretra lor urna neque sed quis orci nulla. Laoremut vitae doloreet condimentumst
-                            phasellentes dolor ut a ipsum id consectetus. Inpede cumst vitae ris tellentesque fring
-                            intesquet.</p>
-                        <div class="readmore">
-                            <a href="#">Read More »</a>
-                        </div>
-                    </article>
-                    <article id="article2">
-                        <h2>LORUM IPSUM DOLOR</h2>
-                        <figure><img src="./images/demo/80x80.gif" alt=""></figure>
-                        <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed.
-                            Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras
-                            urna urnaretra lor urna neque sed quis orci nulla. Laoremut vitae doloreet condimentumst
-                            phasellentes dolor ut a ipsum id consectetus. Inpede cumst vitae ris tellentesque fring
-                            intesquet.</p>
-                        <div class="readmore">
-                            <a href="#">Read More »</a>
-                        </div>
-                    </article>
-                    <article id="article3">
-                        <h2>LORUM IPSUM DOLOR</h2>
-                        <figure><img src="./images/demo/80x80.gif" alt=""></figure>
-                        <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed.
-                            Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras
-                            urna urnaretra lor urna neque sed quis orci nulla. Laoremut vitae doloreet condimentumst
-                            phasellentes dolor ut a ipsum id consectetus. Inpede cumst vitae ris tellentesque fring
-                            intesquet.</p>
-                        <div class="readmore">
-                            <a href="#">Read More »</a>
-                        </div>
-                    </article>
-                </section>
-                <!-- =================================== -->
-                <!-- ========== section 3 ============== -->
-                <section class="section3">
-                    <article id="article1">
-                        <figure>
-                            <img src="./images/demo/215x100.gif" alt="">
-                        </figure>
-                        <figcaption>
-                            <h2>INDONECTETUS FACILIS</h2>
-                            <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
-                            <div class="readmore">
-                                <a href="#">Read More »</a>
-                            </div>
-                        </figcaption>
-                    </article>
-                    <article id="article2">
-                        <figure>
-                            <img src="./images/demo/215x100.gif" alt="">
-                        </figure>
-                        <figcaption>
-                            <h2>INDONECTETUS FACILIS</h2>
-                            <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
-                            <div class="readmore">
-                                <a href="#">Read More »</a>
-                            </div>
-                        </figcaption>
-                    </article>
-                    <article id="article3">
-                        <figure>
-                            <img src="./images/demo/215x100.gif" alt="">
-                        </figure>
-                        <figcaption>
-                            <h2>INDONECTETUS FACILIS</h2>
-                            <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
-                            <div class="readmore">
-                                <a href="#">Read More »</a>
-                            </div>
-                        </figcaption>
-                    </article>
-                    <article id="article4">
-                        <figure>
-                            <img src="./images/demo/215x100.gif" alt="">
-                        </figure>
-                        <figcaption>
-                            <h2>INDONECTETUS FACILIS</h2>
-                            <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
-                            <div class="readmore">
-                                <a href="#">Read More »</a>
-                            </div>
-                        </figcaption>
-                    </article>
-                </section>
+                <section class="section2" id="section2"></section>
+                <section class="section3" id="section3"></section>
             </div>
         </div>
     </div>
-    <!-- =================================== -->
-    <!-- ========== Footer ============== -->
     <div class="wrapper row3">
-        <footer>
-            <p>Copyright © 2021 - All Rights Reserved - CinemaBandi</p>
-            <p>Template cloned from OS-Templates by Ervin </p>
-        </footer>
+        <footer id="footer"></footer>
     </div>
+    <script src="./index.js"></script>
+    </body>
+</html>
