--- a/Assignments/Assignment_Table/T-83/T83_spaceX.html
+++ b/Assignments/Assignment_Table/T-83/T83_spaceX.html
@@ -36,7 +36,52 @@
     </div>
     <div class="wrapper row2">
         <div id="container" class="clear">
-            
+            <!-- <section id="slider"><a href="#">
+                <img src="./images/spaceX.jpg" alt="" id="myBanner"></a></section>
+            <div id="homepage">
+                <section id="services" class="clear">
+                    <article class="one_quarter">
+                        <figure><img src="./images/elon.jpg" width="32" height="32" alt=""></figure>
+                        <strong>Elon Musk</strong>
+                        <p>Is an entrepreneur and business magnate. He is the founder, CEO, and Chief Engineer at SpaceX, early stage investor.</p>
+                        <p class="more"><a href="#">Read More &raquo;</a></p>
+                    </article>
+                    <article class="one_quarter">
+                        <figure><img src="./images/hari 1.jpg" width="32" height="32" alt=""></figure>
+                        <strong>Punem Harish</strong>
+                        <p>Manager in the SpaceX Company. 10 Years experience in the development. 8 years experience in this feild.</p>
+                        <p class="more"><a href="#">Read More &raquo;</a></p>
+                    </article>
+                    <article class="one_quarter">
+                        <figure><img src="./images/busi1.jpg" width="32" height="32" alt=""></figure>
+                        <strong>John Meckalon</strong>
+                        <p>Managing all the required equiments in the SpaceS Company. 5 years experience in this feild.</p>
+                        <p class="more"><a href="#">Read More &raquo;</a></p>
+                    </article>
+                    <article class="one_quarter lastbox">
+                        <figure><img src="./images/busi2.jpg" width="32" height="32" alt=""></figure>
+                        <strong>Storm</strong>
+                        <p>To maintain the Accounts in the SpaceX.  6 years experience in this feild.</p>
+                        <p class="more"><a href="#">Read More &raquo;</a></p>
+                    </article>
+                </section>
+                <section class="last clear">
+                    <article class="three_quarter">
+                        <h2>SpaceX  AeroSpace  Company</h2>
+                        <p>SpaceX designs, manufactures and launches advanced rockets and spacecraft. The company was founded in 2002 to revolutionize space technology, ...<a href="https://www.os-templates.com/"
+                                title="Free Website Templates">OS Templates</a>. For full terms of use of this template
+                            please read our <a href="https://www.os-templates.com/template-terms">website template
+                                licence</a>.</p>
+                        <p>SpaceX's achievements include the first privately funded liquid-propellant rocket to reach orbit (Falcon 1 in 2008), the first private company to successfully launch <a href="https://www.os-templates.com/">free website templates</a>.</p>
+                        <footer class="more"><a href="#">Read More &raquo;</a></footer>
+                    </article>
+                    <article class="one_quarter lastbox">
+                        <h2>Tesla</h2>
+                        <p>Elon Musk had the one of the another company name is Tesla is accelerating the world's transition to sustainable energy with electric cars, solar and integrated renewable energy solutions for home.</p>
+                        <footer class="more"><a href="#">Read More &raquo;</a></footer>
+                    </article>
+                </section>
+            </div> -->
         </div>
     </div>
     <div class="wrapper row3">
