--- a/Assignments/Assignment Dynamic Templates/Dynamic Basic 88/index.html
+++ b/Assignments/Assignment Dynamic Templates/Dynamic Basic 88/index.html
@@ -9,157 +9,28 @@
     
 </head>
 <body>
-<!-- ========== Header ============== -->
     <div class="wrapper row1">
         <header>
-            <div id="title">
-                <h1><a href="#">Basic 88</a></h1>
-                <h2>Free HTML5 Website Template</h2>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="#">Text Link</a></li>
-                    <li><a href="#">Text Link</a></li>
-                    <li><a href="#">Text Link</a></li>
-                    <li><a href="#">Text Link</a></li>
-                    <li class="last"><a href="#">Text Link</a></li>
-                </ul>
-                
-            </nav>
+            <div id="title"></div>
+            <nav></nav>
         </header>
     </div>
-    <!-- ================================================================================================================= -->
-
-    <!-- =================================================== Container =================================================== -->
     <div class="wrapper row2">
         <div class="container">
-            <!-- ==================== Section 1 ==================== -->
-            <section id="section1">
-                <img src="./images/demo/960x360.gif" alt="">
-            </section>
-            <!-- =================================== -->
-
-            <!-- ========== Homepage ============== -->
+            <section id="section1"></section>
             <div id="homepage">
-                <!-- =================================== -->
-                <!-- ========== section 2 ============== -->
-                <section id="section2">
-                    <article id="article1">
-                        <figure>
-                            <img src="./images/demo/290x180.gif" alt="">
-                        </figure>
-                        <figcaption>
-                            <h2>Indonectetus Facilis</h2>
-                            <p class="para">Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
-                            <p class="readmore">
-                                <a href="#">Read More »</a>
-                            </p>
-                        </figcaption>
-                    </article>
-                    <article id="article2">
-                        <figure>
-                            <img src="./images/demo/290x180.gif" alt="">
-                        </figure>
-                        <figcaption>
-                            <h2>Indonectetus Facilis</h2>
-                            <p class="para">Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
-                            <p class="readmore">
-                                <a href="#">Read More »</a>
-                            </p>
-                        </figcaption>
-                    </article>
-                    <article id="article3">
-                        <figure>
-                            <img src="./images/demo/290x180.gif" alt="">
-                        </figure>
-                        <figcaption>
-                            <h2>Indonectetus Facilis</h2>
-                            <p class="para">Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
-                            <p class="readmore">
-                                <a href="#">Read More »</a>
-                            </p>
-                        </figcaption>
-                    </article>
-                </section>
-                <!-- =================================== -->
-                <!-- ========== section 3 ============== -->
-                <div id="section3">
-                    <figure>
-                        <img src="./images/demo/450x250.gif" alt="">
-                    </figure>
-                    <figcaption>
-                        <strong>Indonectetus facilis leo nibh</strong>
-                        <p >This is a W3C compliant free website template from OS Templates. For full terms of use of this template please read our website template licence.</p>
-                        <p >You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more HTML5 templates visit free website templates.</p>
-                        <p class="readmore">
-                            <a href="#">Read More »</a>
-                        </p>
-                    </figcaption>
-                </div>
+                <section id="section2"></section>
+                 <div id="section3"></div>
             </div>
         </div>
     </div>
-    <!-- ================================================================================================================= -->
-    <!-- ========== Footer 1 ============== -->
     <div class="wrapper row3">
-        <footer id="details">
-            <section id="details-section1">
-                <h2>link block</h2>
-                <nav>
-                    <ul>
-                        <li><a href="#">Lorem ipsum dolor sit</a></li>
-                        <li><a href="#">Amet consectetur</a></li>
-                        <li><a href="#">Praesent vel sem id</a></li>
-                        <li><a href="#">Curabitur hendrerit est</a></li>
-                        <li><a href="#">Sed a nulla urna</a></li>
-                    </ul>
-                </nav>
-            </section>
-            <section id="details-section2">
-                <h2>link block</h2>
-                <nav>
-                    <ul>
-                        <li><a href="#">Lorem ipsum dolor sit</a></li>
-                        <li><a href="#">Amet consectetur</a></li>
-                        <li><a href="#">Praesent vel sem id</a></li>
-                        <li><a href="#">Curabitur hendrerit est</a></li>
-                        <li><a href="#">Sed a nulla urna</a></li>
-                    </ul>
-                </nav>
-            </section>
-            <section id="details-section3">
-                <h2>link block</h2>
-                <nav>
-                    <ul>
-                        <li><a href="#">Lorem ipsum dolor sit</a></li>
-                        <li><a href="#">Amet consectetur</a></li>
-                        <li><a href="#">Praesent vel sem id</a></li>
-                        <li><a href="#">Curabitur hendrerit est</a></li>
-                        <li><a href="#">Sed a nulla urna</a></li>
-                    </ul>
-                </nav>
-            </section>
-            <section id="details-section4">
-                <h2>link block</h2>
-                <nav>
-                    <ul>
-                        <li><a href="#">Lorem ipsum dolor sit</a></li>
-                        <li><a href="#">Amet consectetur</a></li>
-                        <li><a href="#">Praesent vel sem id</a></li>
-                        <li><a href="#">Curabitur hendrerit est</a></li>
-                        <li><a href="#">Sed a nulla urna</a></li>
-                    </ul>
-                </nav>
-            </section>
-        </footer>
+        <footer id="details"></footer>
     </div>
-<!-- ================================================================================================================= -->
-    <!-- ========== Footer 2 ============== -->
     <div class="wrapper row4">
-        <footer id="main_footer">
-            <p id="left_footer">Copyright © 2018 - All Rights Reserved - Domain Name</p>
-            <p id="right_footer">Template by OS Templates</p>
-        </footer>
+        <footer id="footer"></footer>
     </div>
+
+    <script src="./index.js"></script>
 </body>
 </html>
