--- a/Assignments/Assignment_Table/T-83/index.html
+++ b/Assignments/Assignment_Table/T-83/index.html
@@ -11,8 +11,8 @@
     <div class="wrapper row1">
         <header id="header" class="clear">
             <div id="hgroup">
-                <!-- <h1><a href="#">SpaceX</a></h1>
-                <h2>AeroSpace Company</h2> -->
+                <h1><a href="#">SpaceX</a></h1>
+                <h2>AeroSpace Company</h2> 
             </div>
             <form action="#" method="post">
                 <fieldset>
@@ -29,6 +29,12 @@
                     <li><a href="#">Starship</a></li>
                     <li><a href="#">Rideshare</a></li>
                     <li class="last"><a href="#">Human Spacelight</a></li> -->
+
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Dragon</a></li>
+                    <li><a href="#">Starship</a></li>
+                    <li><a href="#">Rideshare</a></li>
+                    <li class="last"><a href="./T83_spaceX._User_details.html">Users Details</a></li> 
                    
                 </ul>
             </nav>
@@ -91,7 +97,7 @@
                     title="Free Website Templates">OS Templates</a></p>
         </footer>
     </div>
-    <script src="./spaceX_style.js"></script>
+    <script src="./spaceX_style."></script>
 </body>
 
 </html>
