--- a/Assignments/Assignment_Table/T-84/users_details.html
+++ b/Assignments/Assignment_Table/T-84/users_details.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
-<title>Movies</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./movie_poster_style.css" type="text/css">
-<style>  
-</style>
+    <title>Movies</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./movie_poster_style.css" type="text/css">
+    <style>
+    </style>
 </head>
+
 <body>
-<div class="wrapper row1">
-  <header id="header" class="clear">
-    <div id="hgroup">
-      <h1><a href="#">Movie Dada</a></h1>
-      <h2>Free to Watch</h2> 
+    <div class="wrapper row1">
+        <header id="header" class="clear">
+            <div id="hgroup">
+                <h1><a href="#">Movie Dada</a></h1>
+                <h2>Free to Watch</h2>
+            </div>
+            <form action="#" method="post">
+                <fieldset>
+                    <legend>Search:</legend>
+                    <input type="text" value="Search Our Website&hellip;"
+                        onFocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;">
+                    <input type="submit" id="sf_submit" value="submit">
+                </fieldset>
+            </form>
+            <nav>
+                <ul id="demo">
+                    <li><a href="./T84_movie_poster.html">Home</a></li>
+                    <li><a href="#">Tollywood</a></li>
+                    <li><a href="#">Bollywood</a></li>
+                    <li><a href="#">Hollywood</a></li>
+                    <li class="last"><a href="./users_details.html">User Details</a></li>
+                </ul>
+            </nav>
+        </header>
     </div>
-    <form action="#" method="post">
-      <fieldset>
-        <legend>Search:</legend>
-        <input type="text" value="Search Our Website&hellip;" onFocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;">
-        <input type="submit" id="sf_submit" value="submit">
-      </fieldset>
-    </form>
-    <nav>
-      <ul id="demo">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Tollywood</a></li>
-        <li><a href="#">Bollywood</a></li>
-        <li><a href="#">Hollywood</a></li>
-        <li class="last"><a href="./users_details.html">User Details</a></li> 
-      </ul>
-    </nav>
-  </header>
-</div>
-<div class="wrapper row2">
-  <div id="container" class="clear">
-    <section id="slider"><a href="#"><img src="./images/power.jpg" width="960" height="360" alt="" id="myBanner"></a></section>
+    <div class="wrapper row2">
+        <div id="container" class="clear">
+            <!-- <section id="slider"><a href="#"><img src="./images/power.jpg" width="960" height="360" alt="" id="myBanner"></a></section>
     <section id="shout">
       <p>Bheemla Nayak is an upcoming Telugu language action thriller film directed by Saagar K. Chandra from a screenplay written by Trivikram Srinivas. It is a remake of the 2020 Malayalam film Ayyappanum Koshiyum by Sachy. Produced by Suryadevara Naga Vamsi of Sithara Entertainments, the film stars Pawan Kalyan, Rana Daggubati, and Nithya Menen.</p>
     </section>
@@ -66,7 +69,7 @@
         <article class="one_quarter">
           <figure class="myImage">
             <img src="images/images 6.jpg" width="215" height="315" alt=""> -->
-             <figcaption>Master</figcaption> -->
+            <!-- <figcaption>Master</figcaption> 
             <figcaption>ACHARYA</figcaption>
 
           </figure>
@@ -74,37 +77,70 @@
         <article class="one_quarter">
           <figure class="myImage">
             <img src="images/images8.jpg" width="215" height="315" alt=""> -->
-            <figcaption>Oxygen</figcaption> -->
+            <!-- <figcaption>Oxygen</figcaption> 
             <figcaption>PUSHPA</figcaption>
 
           </figure>
         </article>
         <article class="one_quarter">
           <figure class="myImage">
-            <img src="images/Bhai.jpg" width="215" height="315" alt=""> -->
+            <img src="images/Bhai.jpg" width="215" height="315" alt=""> 
             <figcaption>My Story</figcaption> -->
-            <figcaption>BACHELOR</figcaption>
+            <!-- <figcaption>BACHELOR</figcaption>
 
           </figure>
         </article>
         <article class="one_quarter lastbox">
           <figure class="myImage">
-            <img src="images/images9.jpg" width="215" height="315" alt=""> -->
-             <figcaption>Love Story</figcaption> -->
+            <img src="images/images9.jpg" width="215" height="315" alt=""> 
+             <figcaption>Love Story</figcaption>
             <figcaption>RANGASTALAM</figcaption>
 
           </figure>
         </article>
       </section>
+    </div>   -->
+            <table border="1" style="width:100%">
+                <thead>
+                    <tr>
+                        <th>fname</th>
+                        <th>lname</th>
+                        <th>tel</th>
+                        <th>Address</th>
+                        <th>City</th>
+                        <th>State</th>
+                        <th>zip</th>
+
+                    </tr>
+                </thead>
+                <tbody>
+
+
+                </tbody>
+            </table>
+        </div>
     </div>
-  </div>
-</div>
-<div class="wrapper row3">
-  <footer id="footer" class="clear">
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
-    <p class="fl_right">Movies By<a target="_blank" href="https://www.movies Dada.com/" title="Free Movies Website">  Hari Vardhan</a></p>
-  </footer>
-</div> 
-<script src=""></script>
+    <div class="wrapper row3">
+        <footer id="footer" class="clear">
+            <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
+            <p class="fl_right">Movies By<a target="_blank" href="https://www.movies Dada.com/"
+                    title="Free Movies Website"> Hari Vardhan</a></p>
+        </footer>
+    </div>
+    <script src="./users.js"></script>
+    <script>
+
+        users.forEach((user) => {
+            var myTr = document.createElement("tr");
+            for (a in user) {
+                var myTd = document.createElement("td")
+                myTd.innerHTML = user[a]
+                myTr.appendChild(myTd)
+            }
+            document.querySelector("tbody").appendChild(myTr);
+
+        })
+    </script>
 </body>
+
 </html>
