--- a/Assignments/Assignment_Table/T-88/user details.html
+++ b/Assignments/Assignment_Table/T-88/user details.html
@@ -14,11 +14,11 @@
     </div>
     <nav>
       <ul id="demo">
-        <li><a href="#">Home</a></li>
+        <li><a href="./T88_developer.html">Home</a></li>
         <li><a href="#">Courses</a></li>
         <li><a href="#">Placements</a></li>
         <li><a href="#">Team</a></li>
-        <li class="last"><a href="./">About</a></li> 
+        <li class=""><a href="./user details.html">User Details</a></li> 
       </ul>
     </nav>
   </header>
@@ -26,7 +26,7 @@
 <div class="wrapper row2">
   <div id="container" class="clear">
     <!-- Slider -->
-    <section id="slider"><a href="#"><img src="./images/mern.jpg" width="960" height="360"alt="" id="myBanner"></a></section>
+    <!-- <section id="slider"><a href="#"><img src="./images/mern.jpg" width="960" height="360"alt="" id="myBanner"></a></section>
     <div id="homepage">
       <section id="services" class="clear">
         <article class="one_third">
@@ -73,7 +73,26 @@
           </figure>
         </article>
       </section>
-    </div>
+    </div> -->
+
+    <table border="1"style="width:100%">
+        <thead>
+            <tr>
+                <th>fname</th>
+                <th>lname</th>
+                <th>tel</th>
+                <th>Address</th>
+                <th>City</th>
+                <th>State</th>
+                <th>zip</th>
+
+            </tr>
+        </thead>
+        <tbody>
+
+
+        </tbody>
+    </table>
   </div>
 </div>
 <div class="wrapper row3">
