--- a/Javascript/Templates_Dynamic/basic-83/index.html
+++ b/Javascript/Templates_Dynamic/basic-83/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-<title>Basic 84</title>
+<title>Basic 83</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="styles/layout.css" type="text/css">
 <!--[if lt IE 9]><script src="scripts/html5shiv.js"></script><![endif]-->
@@ -10,7 +10,7 @@
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="#">Basic 84</a></h1>
+      <h1><a href="#">Basic 83</a></h1>
       <h2>Free HTML5 Website Template</h2>
     </div>
     <form action="#" method="post">
@@ -22,10 +22,10 @@
     </form>
     <nav>
       <ul>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="#">Text Link</a></li>
         <li><a href="#">Text Link</a></li>
-        <li><a href="#">Text Link</a></li>
-        <li><a href="#">Text Link</a></li>
+        <li><a href="usersDetails.html">Users Details</a></li>
         <li class="last"><a href="#">Text Link</a></li>
       </ul>
     </nav>
@@ -35,32 +35,33 @@
 <div class="wrapper row2">
   <div id="container" class="clear">
     <!-- content body -->
-    <section id="slider"><a href="#">
-      <img src="images/demo/960x360.gif" alt="" id="myBanner"></a></section>
-    <section id="shout">
-      <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt namjusto cras urna.</p>
-    </section>
+    <section id="slider"><a href="#"><img src="images/demo/960x280.gif" alt=""></a></section>
     <!-- main content -->
     <div id="homepage">
       <!-- services area -->
-      <h1>Services We Offer</h1>
       <section id="services" class="clear">
-        <article>
+        <article class="one_quarter">
           <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
           <strong>Lorum ipsum dolor</strong>
-          <p>This is a W3C compliant free website template from <a href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a>. For full terms of use of this template please read our <a href="https://www.os-templates.com/template-terms">website template licence</a>.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
           <p class="more"><a href="#">Read More &raquo;</a></p>
         </article>
-        <article>
+        <article class="one_quarter">
           <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
           <strong>Lorum ipsum dolor</strong>
-          <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
           <p class="more"><a href="#">Read More &raquo;</a></p>
         </article>
-        <article class="last">
+        <article class="one_quarter">
           <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
           <strong>Lorum ipsum dolor</strong>
-          <p>For more HTML5 templates visit <a href="https://www.os-templates.com/">free website templates</a>. Orciinterdum condimenterdum nullamcorper elit nam curabitur laoreet met praesenean et iaculum.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+          <p class="more"><a href="#">Read More &raquo;</a></p>
+        </article>
+        <article class="one_quarter lastbox">
+          <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
+          <strong>Lorum ipsum dolor</strong>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
           <p class="more"><a href="#">Read More &raquo;</a></p>
         </article>
       </section>
@@ -69,35 +70,20 @@
       <!-- ########################################################################################## -->
       <!-- ########################################################################################## -->
       <!-- ########################################################################################## -->
-      <!-- One Quarter -->
-      <h1>Latest From The Gallery</h1>
-      <section id="latest" class="last clear">
-        <article class="one_quarter">
-          <figure class="myImage">
-            <!-- <img src="images/demo/215x315.gif" width="215" height="315" alt=""> -->
-            <figcaption>Image Caption Here</figcaption>
-          </figure>
-        </article>
-        <article class="one_quarter">
-          <figure class="myImage">
-            <!-- <img src="images/demo/215x315.gif" width="215" height="315" alt=""> -->
-            <figcaption>Image Caption Here</figcaption>
-          </figure>
-        </article>
-        <article class="one_quarter">
-          <figure class="myImage">
-            <!-- <img src="images/demo/215x315.gif" width="215" height="315" alt=""> -->
-            <figcaption>Image Caption Here</figcaption>
-          </figure>
+      <section class="last clear">
+        <article class="three_quarter">
+          <h2>Lorum ipsum dolor</h2>
+          <p>This is a W3C compliant free website template from <a href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a>. For full terms of use of this template please read our <a href="https://www.os-templates.com/template-terms">website template licence</a>.</p>
+          <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more HTML5 templates visit <a href="https://www.os-templates.com/">free website templates</a>.</p>
+          <footer class="more"><a href="#">Read More &raquo;</a></footer>
         </article>
         <article class="one_quarter lastbox">
-          <figure class="myImage">
-            <!-- <img src="images/demo/215x315.gif" width="215" height="315" alt=""> -->
-            <figcaption>Image Caption Here</figcaption>
-          </figure>
+          <h2>Lorum ipsum dolor</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper pellentesque. Quisque non luctus sem.</p>
+          <footer class="more"><a href="#">Read More &raquo;</a></footer>
         </article>
       </section>
-      <!-- / One Quarter -->
+      <!-- / Two Third -->
     </div>
     <!-- / content body -->
   </div>
@@ -109,6 +95,5 @@
     <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
   </footer>
 </div>
-<script src="./basic-84.js"></script>
 </body>
 </html>
